# cloudformation-for-wordpress

./: .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml
img/: wordpress-infra-image.drawio
parameters/: stack-ec2-web.json  stack-rds.json  stack-security-group.json  stack-vpc.json
templates/: stack-ec2-web.yml  stack-rds.yml  stack-security-group.yml  stack-vpc.yml
