[tool.poetry]
name = "my-cfn-templates"
version = "0.1.0"
description = ""
authors = ["Lycheejam <lycheejamwow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
yamllint = "^1.23"
cfn-lint = "^0.29.6"
pre-commit = "^2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
